syntax = "proto3";

package com.sangsiklog.service.knowledge;

import "common/common.proto";
import "content/CategoryService.proto";

service KnowledgeService {
  rpc RegisterKnowledge(KnowledgeRegistrationRequest) returns (KnowledgeRegistrationResponse);
  rpc GetKnowledgeList(KnowledgeListGetRequest) returns (KnowledgeListGetResponse);
  rpc GetKnowledgeDetail(KnowledgeDetailGetRequest) returns (KnowledgeDetailGetResponse);
}

message KnowledgeRegistrationRequest {
  int64 userId = 1;
  string title = 2;
  string description = 3;
  int64 categoryId = 4;
}

message KnowledgeRegistrationResponse {
  int64 knowledgeId = 1;
}

message KnowledgeListGetRequest {
  common.Pageable pageable = 1;
}

message KnowledgeListGetResponse {
  repeated KnowledgeDetail knowledgeDetail = 1;
  common.PagerInfo pagerInfo = 2;
}

message KnowledgeDetailGetRequest {
  int64 knowledgeId = 1;
}

message KnowledgeDetailGetResponse {
  KnowledgeDetail knowledgeDetail = 1;
}

message KnowledgeDetail {
  int64 knowledgeId = 1;
  string title = 2;
  string description = 3;
  category.CategoryDetail category = 4;
  int64 createdAt = 5;
}